packages/typ/tests/fixtures/diagnostics/0182_adt_record_field_bool_int_06.ml.expected
File "0182_adt_record_field_bool_int_06.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0182_adt_record_field_bool_int_06 is not a valid module name.

File "0182_adt_record_field_bool_int_06.ml", line 2, characters 38-39:
2 | let _ : rec_zeta = { age = 5; ready = 6 }
                                          ^
Error: The constant 6 has type int but an expression was expected of type
         bool
