packages/typ/tests/fixtures/diagnostics/0182_adt_record_field_bool_int_06.ml
type rec_zeta = { age : int; ready : bool }
let _ : rec_zeta = { age = 5; ready = 6 }
